[package]
name = "oxford_dictionary_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
loggit = "0.1.4"
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = {version="1.44.2", features=["full"]}

[lib]
name = "oxford_dictionary_lib"
path = "src/lib.rs"

[[bin]]
name = "lib_test"
path = "src/main.rs"
